src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Conta ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CNPJ__c</fullName>
        <label>CNPJ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InscricaoEstadual__c</fullName>
        <description>Campo para receber a Inscrição Estadual</description>
        <label>Inscrição estadual</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LuizaCode__c</fullName>
        <externalId>true</externalId>
        <label>LuizaCode</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <label>Nick Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NomeFantasia__c</fullName>
        <label>Nome Fantasia</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE( 
CASE(IF( TotalCases__c == 0, 0, CEILING( SellerRating__c /  TotalCases__c ) ), 
1, &quot;/img/samples/stars_100.gif&quot;, 
2, &quot;/img/samples/stars_200.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <label>Avaliação</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecebeInformacoesEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receber informações por email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecebeNewsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receber newsletter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecebeSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receber SMS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SellerRating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Avaliação Lojista</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingComplement__c</fullName>
        <label>Complemento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Número de Casos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccountsMktPlace</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>NomeFantasia__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PC_EMAIL</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ClientePJ,Account.Seller,PersonAccount.ClientePF</value>
        </filters>
        <label>Todas as Contas - MktPlace</label>
        <sharedTo>
            <role>Atendente_MktPlace</role>
            <role>GerenteGeral_MktPlace</role>
            <role>Supervisao_MktPlace</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccountsSamsung</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.ClientePJ,Account.Seller,PersonAccount.ClientePF</value>
        </filters>
        <label>Todas as Contas - Samsung</label>
        <sharedTo>
            <role>Atendente</role>
            <role>Coordenacao</role>
            <role>Gerente_Geral</role>
            <role>Supervisao</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>ClientePJ</fullName>
        <active>true</active>
        <label>Cliente PJ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conta_Negocio</fullName>
        <active>true</active>
        <label>Conta Negocio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seller</fullName>
        <active>true</active>
        <label>Lojista</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>